--- a/content justification.html
+++ b/content justification.html
@@ -77,9 +77,75 @@
 	<strong> 4. Responsiveness: </strong> We want people to respond and speak up. We encourage this. The more people start to voice themselves, share their experiences and stand up for themselves and others, the more used this world will get to this, and changes will be made. </p>
 		
    
-<h4 class="content_subtext mt-4"></h4>
-      <p>Reflection on what has been done and describe in detail what you would do if the project would continue.</p>
-      <p>Describe in detail your future recommendations if the campaign would be continued.</p>
+<h4 class="content_subtext mt-4">Brand Persona</h4>
+      <p>In marketing, we have decided to focus on a target audience between the ages of 18-and 27, all genders, and living in the Netherlands. Therefore, we will interview people who have this in common. We have several questions to ask in our 15 interviews to gain insight into our brand persona. We came up with the following questions:</p>
+      
+		<p><strong>General Questions</strong>
+<br>
+	How old are you? 
+<br>
+	With what gender do you identify yourself? 
+<br>
+	Where do you live?
+<br>
+	What is your relationship status?
+<br>
+	What is your occupation?
+</p>
+		<p><strong>Questions About Personality</strong>
+		<br>
+	How much percentage would you say you are introverted and how much percentage are ex-troverted? Why would you say so?
+<br>
+	How much percentage would you say you are sensing and how much percentage intuitive? Why would you say so? 
+<br>
+	How much percentage would you say you are thinking and how much percentage feeling? Why would you say so? 
+<br>
+	How much percentage would you say you are judging and how much percentage perceiv-ing? Why would you say so?
+<br>
+	What would you say are your best character traits? And what are your lesser character traits?
+<br>
+	How much percentage would you say, you value work and how much family?
+</p>
+		<p><strong>Question About Likes/Goals in Life:</strong><br>
+	What are your daily activities? 
+<br>
+	What are your hobbies?
+<br>
+	What are your short-term and long-term goals?
+<br>
+	What motivates you to achieve these goals?
+<br>
+	What makes you happy?
+<br>
+	What gets on your nerves/ frustrates you? 
+<br>
+	What worries you or struggle you within your everyday life?
+</p>
+		<p><strong>Questions about preferences:</strong><br>
+	What are your favorite brands? Why so? <br>
+	What do you find important when choosing a brand?
+<br>
+	What are your turn-offs when it comes to brands, so for example, in their communication, treatment, etcetera? 
+</p>
+		<p><strong>Questions about media habits:</strong><br>
+	Which platforms/social media do you use most?
+<br>
+	How much time do you spend on these platforms?
+<br>
+	What do you use the different platforms for?
+<br>
+	When do you spend time on these different platforms?
+</p>
+		<p><strong>Questions about our vision and values:</strong><br>
+	Do you go out in the evening/at night?<br>
+	After what time do you usually stay inside your house?
+<br>
+	When talking about dating, meeting people, being addressed, being in a relationship, cross-ing boundaries, etcetera. What are things you like in general?
+<br>
+	What are things you hate?
+<br>
+	What are things that frustrate you?
+</p>
       <p>Detail and describe clearly the process of what your would do differently based on you experience on this project related to the marketing assignment.</p>
       <h4 class="mt-4">Professionalism</h4>
       <p>Present and organize below all social media/online activities of the campaign. Context and material are according to the brand style, image, and vision. Images on the site are of high-quality, readable, and properly designed.</p>
