--- a/content justification.html
+++ b/content justification.html
@@ -146,7 +146,15 @@
 <br>
 	What are things that frustrate you?
 </p>
-      <p>Detail and describe clearly the process of what your would do differently based on you experience on this project related to the marketing assignment.</p>
+		
+      <p><strong>Persona Recordings</strong><br>
+		  <a href="https://edubuas-my.sharepoint.com/:f:/g/personal/202462_buas_nl/EgNmcHMmnfJFlQfvwYqcF0wBDl6jSWKigHC7jAA5yKXkQA?e=sNY0Dx">
+			  Persona Recordings Alisha Wenas (202462)</a><br>
+<a href="https://edubuas-my.sharepoint.com/:f:/g/personal/202118_buas_nl/ErWAa-1sAHFMp2N3xrhLFn4BnL3pm2GXXJf2WSWgr0zIrQ?e=KasORs">
+	Persona Recordings Michelle Schepers (202118)</a><br>
+<a href="https://edubuas-my.sharepoint.com/:f:/g/personal/201956_buas_nl/Eo5ZB84EtQtMqIpJg9ZmRn4BBVd9_7ATa1_ehj7iWU8dWQ?e=V6g6Fp">
+			  Persona Recordings Kim van den Ham (201956)</a></p>
+		
       <h4 class="mt-4">Professionalism</h4>
       <p>Present and organize below all social media/online activities of the campaign. Context and material are according to the brand style, image, and vision. Images on the site are of high-quality, readable, and properly designed.</p>
       <ul class="list-unstyled d-flex flex-wrap justify-content-center align-items-center">
