--- a/content justification.html
+++ b/content justification.html
@@ -18,7 +18,8 @@
   <body>
 
     <!-- Navigation bar, adapted from https://getbootstrap.com/docs/5.1/components/navbar/ -->
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <br>
+<img class="img-fluid about-the-brand-logo" src="images/about_virtyou_logo.png" alt="Placeholder Image"><img class="img-fluid about-the-brand-logo" src="images/about_virtyou_logo.png" alt="Placeholder Image"><nav class="navbar navbar-expand-lg navbar-light">
   <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
           <img src="images/Virtyou-logo.svg" width="75" alt="Breda University of Applied Sciences">
