--- a/content justification.html
+++ b/content justification.html
@@ -19,7 +19,7 @@
 
     <!-- Navigation bar, adapted from https://getbootstrap.com/docs/5.1/components/navbar/ -->
     <br>
-<img class="img-fluid about-the-brand-logo" src="images/about_virtyou_logo.png" alt="Placeholder Image"><img class="img-fluid about-the-brand-logo" src="images/about_virtyou_logo.png" alt="Placeholder Image"><nav class="navbar navbar-expand-lg navbar-light">
+<nav class="navbar navbar-expand-lg navbar-light">
   <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
           <img src="images/Virtyou-logo.svg" width="75" alt="Breda University of Applied Sciences">
@@ -60,9 +60,7 @@
     </nav>
     <!-- End of navigation bar -->
 
-    <header class="py-2 py-md-4 py-lg-5 text-center container-fluid bg-gradient text-light">
-      <h1 class="fw-light">Corporate information</h1>
-    </header>
+  
 
     <main class="container py-4">
       <h2 class="content_text"> 1 Content</h2>
@@ -155,7 +153,7 @@
 	Persona Recordings Michelle Schepers (202118)</a><br>
 <a href="https://edubuas-my.sharepoint.com/:f:/g/personal/201956_buas_nl/Eo5ZB84EtQtMqIpJg9ZmRn4BBVd9_7ATa1_ehj7iWU8dWQ?e=V6g6Fp">
 			  Persona Recordings Kim van den Ham (201956)</a></p>
-		
+		<img class="img-fluid about-the-brand-logo" src="images/Persona.png" alt="Placeholder Image">
       <h4 class="mt-4">Professionalism</h4>
       <p>Present and organize below all social media/online activities of the campaign. Context and material are according to the brand style, image, and vision. Images on the site are of high-quality, readable, and properly designed.</p>
       <ul class="list-unstyled d-flex flex-wrap justify-content-center align-items-center">
