--- a/content justification.html
+++ b/content justification.html
@@ -153,7 +153,27 @@
 	Persona Recordings Michelle Schepers (202118)</a><br>
 <a href="https://edubuas-my.sharepoint.com/:f:/g/personal/201956_buas_nl/Eo5ZB84EtQtMqIpJg9ZmRn4BBVd9_7ATa1_ehj7iWU8dWQ?e=V6g6Fp">
 			  Persona Recordings Kim van den Ham (201956)</a></p>
-		<img class="img-fluid about-the-brand-logo" src="images/Persona.png" alt="Placeholder Image">
+		<img class="img-fluid about-the-brand-logo" src="images/Persona.png" alt="Placeholder Image"><br>
+		
+		<p><strong>Justification Brand Persona</strong><br>
+			Demographic information: We interviewed youngsters between 18 and 27 years old. All interviewed youngsters live in the south of the Netherlands, and most of them are students, with a social side job, like sales or catering. According to our interview, they all had the problem we are examining, but women have had the problem more than men.<br><br>
+
+Biography: Most interviewees are students with side jobs and play a sport. Almost all students mentioned watching films and series and being with their friends as things they do in their free time.<br><br>
+
+Personality: The interviewees all said to be party introverted and extroverted. Most of them thought they were a little bit more extroverted. The feelings of being sensing versus intuitive differed, just like with thinking and feeling. Most participants said to be slightly more sensing than intuitive and slightly more feeling than thinking in everyday life. The participants agreed that they like to think of themselves as perceiving instead of judging, but every human judges sometimes. The participants value both family and work but find a family more important.<br><br>
+
+Characteristics: The characteristics mentioned above are characteristics that the interviewees mentioned. 'Social' is one of the most mentioned ones.<br><br>
+
+Quote: The interviewees valued respect for others and found it essential to listen to others instead of thinking and speaking for someone else. Most of them had a strong feeling of justice.<br><br>
+
+Motivation and frustrations: Most youngsters mentioned they want to finish their studies, save money to live on, and get their own house while enjoying their life and living it to the fullest. On the other hand, lies and unfair behavior are not welcome in the interviewees' lives.<br><br>
+
+Communication: Many different platforms are being used by our interviewees, mainly Instagram was mentioned a lot. However, TikTok was also mentioned as one of the apps the interviewees spent most of their time on. They use these apps for communication, for example, with friends and classmates, for information, through the news, and for entertainment, for instance, by watching small videos. They use these apps throughout the day, but especially when they wake up before they go to school and during their break from school/work. They estimated to spend three hours a day on all their social media combined.<br><br>
+
+Brands: Most interviewees find it essential that the brand has a story, with which they mean the brand is transparent in what they do, how to do it, and what they stand for. They want to know the brand is doing 'fair business' and does not make unfair use of materials or people. The mentioned brands are not considered very expensive overall, but the interviewees don't mind paying a little extra when a brand is fair and transparent to them.<br><br>
+
+Factors influencing buying behavior: Apart from the values mentioned above, a brand should be ethical, trustworthy, of good quality, and good customer service (friendly and fast) before the students consider buying the brand.
+		</p>
       <h4 class="mt-4">Professionalism</h4>
       <p>Present and organize below all social media/online activities of the campaign. Context and material are according to the brand style, image, and vision. Images on the site are of high-quality, readable, and properly designed.</p>
       <ul class="list-unstyled d-flex flex-wrap justify-content-center align-items-center">
