Visual Brand Identity Logo
Co-Authored-By: Kimvdham201956 <101716803+Kimvdham201956@users.noreply.github.com>

--- a/content justification.html
+++ b/content justification.html
@@ -174,8 +174,30 @@ Brands: Most interviewees find it essential that the brand has a story, with whi
 
 Factors influencing buying behavior: Apart from the values mentioned above, a brand should be ethical, trustworthy, of good quality, and good customer service (friendly and fast) before the students consider buying the brand.
 		</p>
-      <h4 class="mt-4">Professionalism</h4>
-      <p>Present and organize below all social media/online activities of the campaign. Context and material are according to the brand style, image, and vision. Images on the site are of high-quality, readable, and properly designed.</p>
+		
+		<h4 class="content_subtext mt-4">Visual Brand Identity</h4>
+		<p>When we look at the personality of our brand, the words that describe it, our unique selling points (all mentioned in our brand identity), and core values, we have come up with the brand name: VirtYou. We use the word virtue, which "is the moral excellence of a person" (What Are Virtues?, 2019). When people are morally excellent, they have good virtues. They are, for instance, kind, respectful and honest. They do not act on their impulses and desires but upon values and principles. This is the core of our brand message. We changed 'Virtue' to 'VirtYou' because our brand encourages people to be morally excellent and confront those who aren't. We directly address anyone who is not behaving respectfully or ethically correct with this name.</p>
+		
+      <p><strong>Logo Version 1:</strong><br>
+We have chosen to create a tiger as a logo because a tiger is known as a symbol of protection, awareness, and confidence, some words that correspond to our brand personality and values.
+Red symbolizes action, confidence, courage, and change and is a powerful color that stands out!
+
+We have decided not to use complicated lines or too much detail so that the main subject in our logo (the tiger) gets all the attention.
+We have made the name of our brand name black but decided to make the 'YOU' part red because, with our name, we are bringing a message to our target audience. So, by making this, they will feel addressed.<br><br>
+As feedback, we got back that the logo was too detailed, and the color red wasn't bold enough.
+		  <img class="img-fluid about-the-brand-logo" src="images/First_Logo.png" alt="Placeholder Image"><br>
+</p>
+		
+		<p><strong>Logo Version 2:</strong><br>
+In our feedback session, someone suggested that we could leave some parts out, for instance, the eyes. We did this and made the color red as bright as possible.
+<br><br>
+In the second feedback session, we got back that this logo may be too much horror and the differences between line thickness looked a little weird.
+			<img class="img-fluid about-the-brand-logo" src="images/Second_Logo.png" alt="Placeholder Image"><br>
+</p>
+		<p><strong>Logo Final Version:</strong><br>
+We chose the design that multiple people in the last tutorial pointed out as the best one. We did adjust the lines and made them all the same thickness. We also chose a different font because we felt that the other one did not fit the boldness of our brand. We still wanted to go with a simple font that wouldn't take away the attention of the logo.
+			<img class="img-fluid about-the-brand-logo" src="images/Final_Logo.png" alt="Placeholder Image"><br>
+			
       <ul class="list-unstyled d-flex flex-wrap justify-content-center align-items-center">
         <li class="m-2">
           <a href="#"><!-- Please make a link to your socials instead -->
