--- a/content justification.html
+++ b/content justification.html
@@ -197,21 +197,26 @@ In the second feedback session, we got back that this logo may be too much horro
 		<p><strong>Logo Final Version:</strong><br>
 We chose the design that multiple people in the last tutorial pointed out as the best one. We did adjust the lines and made them all the same thickness. We also chose a different font because we felt that the other one did not fit the boldness of our brand. We still wanted to go with a simple font that wouldn't take away the attention of the logo.
 			<img class="img-fluid about-the-brand-logo" src="images/Final_Logo.png" alt="Placeholder Image"><br>
+		</p>
+			
+			<p><strong>Product</strong><br>
+Our brand sells three versions of sweaters: Only logo, Logo + Text, and only text. The sentences on the sweaters will be bold statements such as: "Fuck Off," "No is No," "Ask Before You Do," and "My Body My Rules." Firstly, we only wanted to put the logo on our sweaters because that was the only thing we were allowed to do. When our brand is a little more known amongst our customers, and they know what we represent, the logo would remind them of this. By only wearing a sweater with that logo, our customers already show the outside world that they don't appreciate transgressive behavior and want to feel safe, protected, and heard. But because we are a bold brand and received very good quotes when doing our problem interviews, we also wanted to put these on sweaters. Luckily, we heard during our marketing tutorial that this was okay. These statements are short but significant so that no one can avoid them. Now, our customers can choose themselves what they want to wear. For example, men who are supporting this brand but do not feel the need to wear these slogans because they don't feel like these are applying to them, they can still show support by wearing a sweater with just the logo.</p>
+			
 			
       <ul class="list-unstyled d-flex flex-wrap justify-content-center align-items-center">
         <li class="m-2">
           <a href="#"><!-- Please make a link to your socials instead -->
-            <img alt="Image Placeholder" class="img-thumbnail" src="images/social-media-placeholder.jpg">
+            <img alt="Image Placeholder" class="img-thumbnail" src="images/VirtYou Sweaters_SWEATER 1.png">
           </a>
         </li>
         <li class="m-2">
           <a href="#"><!-- Please make a link to your socials instead -->
-            <img alt="Image Placeholder" class="img-thumbnail" src="images/social-media-placeholder.jpg">
+            <img alt="Image Placeholder" class="img-thumbnail" src="images/VirtYou Sweaters_SWEATER 2.png">
           </a>
         </li>
         <li class="m-2">
           <a href="#"><!-- Please make a link to your socials instead -->
-            <img alt="Image Placeholder" class="img-thumbnail" src="images/social-media-placeholder.jpg">
+            <img alt="Image Placeholder" class="img-thumbnail" src="images/VirtYou Sweaters_SWEATER 3.png">
           </a>
         </li>
       </ul>
