--- a/content justification.html
+++ b/content justification.html
@@ -220,6 +220,16 @@ Our brand sells three versions of sweaters: Only logo, Logo + Text, and only tex
           </a>
         </li>
       </ul>
+		
+		<h4 class="content_subtext mt-4">Brand Identity</h4>
+		<p><strong>Unique Selling Points</strong><br>
+If we look at our brand identity, we have several unique selling points that set us apart from other brands. Our brand is all about the message: the message is key, and therefore, with our sweaters, for example, we will focus on making sure that the feel and design of the sweater matches the feeling of boldness, strength, and empowerment. Therefore, it will not be soft but rather a strong, somewhat rough material. Our brand distinguishes us from many other brands because we contribute to reducing/ or even the disappearance of a worldwide problem, namely women and minorities not feeling safe, protected, and heard while living in a patriarchal world. As a brand, we appeal to emotions associated with our products. Our brand will not be expensive and make people think about the current situation and how to better it through strong and bold quotes. This can sometimes come across as shocking. As a brand, we don't strive for women and minorities to be able to voice their discomforts more than men. We strive for as much safety and protection for women and minorities as men. The same goes for being able to express their feelings and discomforts. Therefore, our brand is inclusive. </p>
+		<p><strong>Visible Elements:</strong>When we came up with the visible elements of our brand, we firstly used the five senses to describe our target, so we could think of elements that would fit these senses. My brand looks like Fire. My brand feels like Empowerment. My brand smells like Burned wood and charcoal. My brand tastes like Cinnamon and peppers. My brand sounds like: Empowering songs (by artists such as Demi Lovato, Sam Smith, Aretha Franklin) / poppy protest songs. 
+		<img class="img-fluid about-the-brand-logo" src="images/Moodboard1.png" alt="Placeholder Image"><br>
+			<img class="img-fluid about-the-brand-logo" src="images/Moodboard2.png" alt="Placeholder Image"><br>
+		</p>
+		
+		
     </main>
 
     <!-- A footer with socials -->  
