--- a/content justification.html
+++ b/content justification.html
@@ -229,6 +229,32 @@ If we look at our brand identity, we have several unique selling points that set
 			<img class="img-fluid about-the-brand-logo" src="images/Moodboard2.png" alt="Placeholder Image"><br>
 		</p>
 		
+		<p><strong>Brand Personality:</strong><br>
+We can define the personality of our brand with several words. First, our brand is tough, bold, and confident. The brand is meant to make clear statements even if that means some people will not like it. Secondly, our brand is real, honest, eye-opening, and caring. With our brand, we want to make people more aware of the current situation and, in the end, make it easier to confront others about their behavior. Lastly, our brand is contemporary. We attack an issue that is still very much present. </p><br>
+		<p><strong>Cornerstones:</strong><br>
+Big Idea:<br>
+The big idea of our brand is that women and minorities should stand up for themselves and voice, if not scream out, their limits. Self-determination and a feeling of safety are the most essential things in life, and these things should be normalized. We want to help women and minorities to feel empowered.
+ <br><br>
+Vision:<br>
+It should be easy and normal for women and minorities to voice their discomforts and show their values.
+ <br><br>
+Values:<br>
+1. Our brand embodies that all women and minorities should feel safe in everyday life. This is an essential must for a happy and healthy life.
+<br>
+2. Our brand embodies that for all women and minorities, it should be self-evident to have self-determination, and it should be easy to show this value to the outside world.
+<br>
+3. Our brand embodies that it is and should be standard for women and minorities to respond to events they find distressing, annoying, or unacceptable. They should be expected to speak their mind and voice their discomfort.
+<br>
+4. Our brand embodies that it is and should be usual to listen to and respect the values of others and to respect the right of self-determination of everyone. It should be obligatory to hear and accept people's wishes about events they are involved in.
+ <br><br>
+Personality:<br>
+Our brand is bold, sassy, shocking, but honest and genuine. It communicates power. We want to open everyone's eyes and embody confidence.
+Bold, sassy, and shocking: usage of hard colors, lines, and images.
+Honest and real: clear communication, transparency, real quotes of women and minorities.
+Power: usage of hard colors, lines, and images. Use of confident-looking models.
+Eye-opening and confident: Use confident-looking models, real quotes of women and minorities, hard colors, lines, and images.</p>
+<br>
+		
 		
     </main>
 
