--- a/account.html
+++ b/account.html
@@ -14,6 +14,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 
     <title>Bootstrap Base Template</title>
+  <script type="text/javascript">
+function MM_popupMsg(msg) { //v1.0
+  alert(msg);
+}
+    </script>
   </head>
   <body>
 
@@ -96,7 +101,7 @@
 			<input type="password" class="input-box" placeholder="password">
 				
 				<p><span><input type="checkbox"></span> I agree to the terms and conditions of the service.</p>
-			<button type="button" class="sing-btn">Sign In</button>
+			<button type="button" class="sing-btn" onClick="MM_popupMsg('You are signed in.')">Sign In</button>
 			<p class="or">OR</p>
 				<a href="register.html" style="color:black">Register</a>
 			
