--- a/account.html
+++ b/account.html
@@ -13,14 +13,14 @@
     <!-- Bootstrap Javascript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 
-    <title>Bootstrap Base Template</title>
+    <title>Sign in Page</title>
   <script type="text/javascript">
 function MM_popupMsg(msg) { //v1.0
   alert(msg);
 }
     </script>
   </head>
-  <body>
+  </html>
 
     <!-- Navigation bar, adapted from https://getbootstrap.com/docs/5.1/components/navbar/ -->
     <nav class="navbar navbar-expand-lg navbar-light">
@@ -110,7 +110,8 @@ function MM_popupMsg(msg) { //v1.0
 		
 </body>
 </html>
-		
+	
+
 	
 	
 	
@@ -143,7 +144,5 @@ function MM_popupMsg(msg) { //v1.0
     </footer>
     <!-- End of the grid -->
 
-	</body>
-	</html>
-
+	
 	  
