--- a/sweater 8.html
+++ b/sweater 8.html
@@ -14,6 +14,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 
     <title>Bootstrap Base Template</title>
+  <script type="text/javascript">
+function MM_popupMsg(msg) { //v1.0
+  alert(msg);
+}
+    </script>
   </head>
   <body>
 
@@ -102,7 +107,7 @@
 <p> €30,- </p>
 	<p>&nbsp;</p>
 	<p>&nbsp;</p>
-<a href="#" class="btnview">Add to shopping card&nbsp;</a>
+<a href="#" class="btnview" onClick="MM_popupMsg('Item has been added to your shopping cart.')">Add to shopping cart&nbsp;</a>
 </div>
 <br><br>
 		  
