--- a/about virtyou.html
+++ b/about virtyou.html
@@ -14,6 +14,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 
     <title>Bootstrap Base Template</title>
+  <script type="text/javascript">
+function MM_popupMsg(msg) { //v1.0
+  alert(msg);
+}
+    </script>
   </head>
   <body>
  
@@ -244,7 +249,7 @@ VirtYou was founded in February 2022. The brand value is based on a lyric from Y
 
             </form>
 
-            <div class="text-center text-md-left">
+           <div class="text-center text-md-left">
                 <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();MM_popupMsg('Your message has been send. We will respond as soon as possible.')">Send</a>
             </div>
             <div class="status"></div>
