--- a/about virtyou.html
+++ b/about virtyou.html
@@ -47,7 +47,7 @@ function MM_popupMsg(msg) { //v1.0
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Account&nbsp; </a>
+              Corporate&nbsp;&nbsp; </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="#">Action</a></li>
                 <li><a class="dropdown-item" href="#">Another action</a></li>
@@ -56,7 +56,7 @@ function MM_popupMsg(msg) { //v1.0
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="corporate.html">Corporate</a>
+              <a class="nav-link" href="corporate.html">&nbsp;</a>
             </li>
           </ul>
         </div>
