--- a/account.html
+++ b/account.html
@@ -102,7 +102,8 @@ function MM_popupMsg(msg) { //v1.0
 				
 				<p><span><input type="checkbox"></span> I agree to the terms and conditions of the service.</p>
 			<button type="button" class="sing-btn" onClick="MM_popupMsg('You are signed in.')">Sign In</button>
-			<input type="password" class="input-box" placeholder="password">
+			<input type="forgotten password" class="input-box" placeholder="If you have forgotten your password, you can write you email here">
+			
 			<button type="button" class="sing-btn" onClick="MM_popupMsg('An email has been sent to you to change your password.')">Forgot Password</button>
 			<p class="or">OR</p>
 				<a href="register.html" style="color:black">Register</a>
