linking drop down menu

--- a/account.html
+++ b/account.html
@@ -47,7 +47,7 @@ function MM_popupMsg(msg) { //v1.0
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Account&nbsp; </a>
+               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="#">Action</a></li>
                 <li><a class="dropdown-item" href="#">Another action</a></li>
@@ -89,9 +89,10 @@ function MM_popupMsg(msg) { //v1.0
 	<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
+	Corporate&nbsp;&nbsp;&nbsp;	Accout&nbsp;
 		
 		 <main class="container py-4">
-		  <div class="row g-3 justify-content-evenly"></div>
+    <div class="row g-3 justify-content-evenly"></div>
 		<div class="sign-in">
 			<h1 style="color:black">Sign in to your account</h1>
 			<br>
