--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@ function MM_popupMsg(msg) { //v1.0
               Corporate&nbsp; </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="content justification.html">Content Justification </a></li>
-                <li><a class="dropdown-item" href="#">Production Justification</a></li>
-				<li><a class="dropdown-item" href="#">Marketing Justification </a></li>
-				<li><a class="dropdown-item" href="#">Management Justification </a></li>
+                <li><a class="dropdown-item" href="production justification.html">Production Justification</a></li>
+				<li><a class="dropdown-item" href="marketing justification.html">Marketing Justification </a></li>
+				<li><a class="dropdown-item" href="management justification.html">Management Justification </a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="#">Marketing</a></li>
               </ul>
