--- a/account.html
+++ b/account.html
@@ -47,16 +47,15 @@ function MM_popupMsg(msg) { //v1.0
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-               </a>
+              Corporate&nbsp; </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="content justification.html">Content Justification </a></li>
+                <li><a class="dropdown-item" href="production justification.html">Production Justification</a></li>
+				<li><a class="dropdown-item" href="marketing justification.html">Marketing Justification </a></li>
+				<li><a class="dropdown-item" href="management justification.html">Management Justification </a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                <li><a class="dropdown-item" href="marketing.html">Marketing</a></li>
               </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="corporate.html">Corporate</a>
             </li>
           </ul>
         </div>
