--- a/catalog.html
+++ b/catalog.html
@@ -18,7 +18,8 @@
   <body>
 
     <!-- Navigation bar, adapted from https://getbootstrap.com/docs/5.1/components/navbar/ -->
-    <nav class="navbar navbar-expand-lg navbar-light">
+	  
+	  <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
           <img src="images/Virtyou-logo.svg" width="75" alt="Breda University of Applied Sciences">
@@ -42,21 +43,21 @@
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Corporate&nbsp;&nbsp; </a>
+              Corporate&nbsp; </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="content justification.html">Content Justification </a></li>
+                <li><a class="dropdown-item" href="production justification.html">Production Justification</a></li>
+				<li><a class="dropdown-item" href="marketing justification.html">Marketing Justification </a></li>
+				<li><a class="dropdown-item" href="management justification.html">Management Justification </a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                <li><a class="dropdown-item" href="marketing.html">Marketing</a></li>
               </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="corporate.html">Corporate</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
+	 
     <!-- End of navigation bar -->
 
 
