--- a/index.html
+++ b/index.html
@@ -57,11 +57,8 @@ function MM_popupMsg(msg) { //v1.0
 				<li><a class="dropdown-item" href="marketing justification.html">Marketing Justification </a></li>
 				<li><a class="dropdown-item" href="management justification.html">Management Justification </a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Marketing</a></li>
+                <li><a class="dropdown-item" href="marketing.html">Marketing</a></li>
               </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="corporate.html">Corporate</a>
             </li>
           </ul>
         </div>
