--- a/corporate.html
+++ b/corporate.html
@@ -58,39 +58,102 @@
     </nav>
     <!-- End of navigation bar -->
 
-    <header class="py-2 py-md-4 py-lg-5 text-center container-fluid bg-gradient text-light">
+  <header class="py-2 py-md-4 py-lg-5 text-center container-fluid bg-gradient text-light">
       <h1 class="fw-light">Corporate information</h1>
     </header>
 
     <main class="container py-4">
       <h2>Marketing</h2>
       <h4 class="mt-4">Context of campaign and promotional activities</h4>
-      <p>Explain the context of the campaign is (What the campaign is about, what the message is, which promotional activities were executed). In addition, present the objectives as mentioned in the Communication & Media Plan.</p>
-      <p>Explain and justify the chosen channels/platforms used and show there is a solid connection to the objectives established in the Communication & Media Plan.</p>
-      <h4 class="mt-4">Learning Points</h4>
-      <p>Identify and justify your learning point (based on the Communication & Media Plan). What did you learn during the duration of the project concerning the campaign? What worked and what didn’t? What went as expected and what didn’t? What would you do differently? Reflect on the past work and describe what you learned.</p>
-      <h4 class="mt-4">Future Planning</h4>
-      <p>Reflection on what has been done and describe in detail what you would do if the project would continue.</p>
-      <p>Describe in detail your future recommendations if the campaign would be continued.</p>
-      <p>Detail and describe clearly the process of what your would do differently based on you experience on this project related to the marketing assignment.</p>
+      <p>Our Campaign is about creating awareness for our brand but also for the on going problem, the issue of living in a patriarchal world in which women and minorities aren't feeling protected and able to voice their boundaries because not enough attention is paid to it, and the boundaries aren't respected or listened to. We want to spread the message that it is alright to stand up for yourself, but when you are not as confident as you aspire to be, you can use/ buy one of our sweaters so they will speak for you.&nbsp;</p>
+      <p>We started by creating awareness for our brand by using TikTok as a starter platform, this as it is well known for going viral in a day. After our first campaign on TikTok we started our Instagram account to create awareness on the longer term, as Instagram is a page where people look for information instead of the quick media on TikTok. From here we started to create more visuals on Instagram as we noticed that we had more viewers there. After getting the viewer excited for our brand we began to share our values and brand vision, this also by getting the viewer involved with the feed by sharing their own stories, we mentioned that the viewer felt supported and empowered as we received multiple stories. When this was executed, we launched our first campaign for the actual product and posted the official campaign video. </p>
+      <p><strong>Reach Objective:<br>
+        </strong> At least 250 people will have seen our messages on our Instagram page before the 14th of April. <br>
+        At least 300 people will have seen our messages on our TikTok page before the 14th of April.&nbsp;</p>
+      <p>Because we are in the beginning stadium of communicating our brand towards our audience, we focus on creating "brand awareness" (Inkbot Design, 2020). Facebook recommends a source audience of between 1,000 and 50,000 people (Henderson, 2020). However, we are a new brand with having no loyal customers yet, followers, or even people who are aware of our brand. Keeping in mind that our target audience is the age group that is spending the most time on social media (CBS, 2020), we aim to have at least 250 people on Instagram and 300 on TikTok who have seen our message before the 14th of April 2022. In our persona interviews it turned out that the hours spent on these two platforms goes more to TikTok. Therefore, we are more likely to have more views on TikTok than on Instagram, even though both are popular among our target audience.&nbsp;</p>
+      <p><strong>Affect Objective:</strong>&nbsp;</p>
+      <p>At least 15 people will feel supported and empowered by our brand or will at least agree to disapprove of crossing someone else's boundaries before the 14th of April 2022.&nbsp;</p>
+      <p>We described at the reach objective that we want 250 people to see our message on Instagram and 300 people to see our messages on TikTok. We aim to have between 2% and 3% of our follower's comment on our posts, which is around 15 people for both platforms in total. We choose 2/3%, because an average engagement rate lies between 1 and 3,5% for Instagram (Polishchuk, 2021). We wanted to challenge ourselves to rise above a low engagement rate to end up in the top of average engagement numbers. But since we are a new brand without financial resources, we think an engagement rate that is higher than average will be hard to accomplish.&nbsp;</p>
+      <p><strong>Response Objective: </strong>Our audience will like and share the page with an average of 150 followers (WorkMacro, 2018) before the 14th of April 2022.&nbsp;</p>
+      <p>This is a result of an engaging feed. As the audience is willing to share their experience with our brand, we will build valuable social proof that can convert potential customers who are on the fence about making a purchase The platforms we will be using are TikTok and Instagram. We will be using these 2 media platforms as these are the most used by our target audience according to our research.&nbsp;</p>
+      <p>Among the many social media platforms there are, we choose TikTok because one of their biggest audience groups (41%)(Aslam, S., 2022) is between the age of 16 and 24. Not only does TikTok fall perfectly in our target audience, the platform is also well known for ‘going viral within a day’. This as TikTok creates an algorithm specialized to what the user views and likes. By using trending hashtags and popular sounds the chance of going viral is pretty high. As a starting brand this could help us build up a social media awareness among our target audience in the beginning stage of our marketing plan.&nbsp;</p>
+      <p>As for our second platform, we choose Instagram for the same reasons as TikTok, it fits our target audience, this as one of the biggest target groups of Instagram is 18-24 years old (31%)(Statista, 2022). Nevertheless the Instagram algorithm works different than that of TikTok. On Instagram you only get to see content of the people you follow, but it is easy to share posts of companies due to the broader communication methods Instagram uses, including group private messages and stories. Although the sharing options are broader, Instagram remains a platform that is more focused on the longer term. We will be using Instagram to keep our followers who came from our TikTok informed about the progression of the company and keep them hooked up after the viral TikTok video.&nbsp;</p>
+      <p>To sum thing up; TikTok will be our opening platform as it is easier to reach a bigger audience than on Instagram. In our TikTok videos we will be promoting our Instagram page so potential customers can keep up to date on our progress and can contain special content via our Instagram page.</p>
+<h4 class="mt-4">Learning Points</h4>
+      <p>During the process we learned that it is less easy to go viral on TikTok then we taught, we also had a much bigger and more invested crowd on Instagram as we had on TikTok. During the campaign we started to focus more on Instagram, and this worked out for us pretty well. We started to see even more interaction when the content was not shared among the two platforms, but was specifically made for Instagram, we noticed this as we were posting our TikTok videos in the stories of our Instagram account they got way less views than the actual posts that were made to be on the Instagram account. We also struggled with meeting our own expectations/objectives, we aimed way higher in numbers than we eventually achieved, we are now realising that is takes even more time for a brand to create awareness than we had in mind.&nbsp;</p>
+      <p>If we would continue with the brand, we would leave TikTok out of the picture for a while to be able to focus on only one platform, Instagram in our case. This to be able to create better and more engaging content on one platform, then medium content with a less bigger viewing on both. We would keep our interaction with the viewers as this worked out for us well, we noticed that viewers were excited to see their own story coming by on the account and that these post interacted well.&nbsp;</p>
+<h4 class="mt-4">Future Planning</h4>
+      <p>Our planning was to have a post on each Tuesday and Thursday at 9:00 in the morning. In one week we switched to the Wednesday and the Friday but noticed that this was not the correct day for our posts as there was less interaction. We also noticed that we shared everything on Instagram but TikTok stayed behind when there was a day that we posted on Instagram. This as we are able to share our TikTok videos on Instagram, but were unable to share our Instagram posts on TikTok.</p>
+      <p>If the project would continue, we would put TikTok on a hold. We would not delete the account but we would start it up again when the brand has a bigger viewing and we have more time to spend on the platform then we have now. We would fully focus on Instagram as it is easier to stay in contact with your viewers and share content they created with us. For the dates we would stay the same, Tuesday and Thursday, the only change we could make is to add a day in the weekend, as we now noticed that there was a lot of time lost between the two posts (4 days without posting). So we would probably add Saturday to keep the feed interactive/ ‘flowing’.</p>
+      <p>As for the objectives, we would set less higher targets next time. It is not doable for a brand that is run by students, meaning that they do not get to spend 100% of their time dedicated to the brand, to achieve the same numbers a starting brand achieves who do have the time to put in 100%.</p>
       <h4 class="mt-4">Professionalism</h4>
-      <p>Present and organize below all social media/online activities of the campaign. Context and material are according to the brand style, image, and vision. Images on the site are of high-quality, readable, and properly designed.</p>
+      <p>&nbsp;All our social media content in order of posting:&nbsp; &nbsp; &nbsp; &nbsp;</p>
       <ul class="list-unstyled d-flex flex-wrap justify-content-center align-items-center">
         <li class="m-2">
           <a href="#"><!-- Please make a link to your socials instead -->
-            <img alt="Image Placeholder" class="img-thumbnail" src="images/social-media-placeholder.jpg">
+            <img alt="Image Placeholder" class="img-thumbnail" src="images/Post1.png">
           </a>
         </li>
         <li class="m-2">
           <a href="#"><!-- Please make a link to your socials instead -->
-            <img alt="Image Placeholder" class="img-thumbnail" src="images/social-media-placeholder.jpg">
+            <img alt="Image Placeholder" class="img-thumbnail" src="images/Post2.png">
           </a>
         </li>
         <li class="m-2">
           <a href="#"><!-- Please make a link to your socials instead -->
-            <img alt="Image Placeholder" class="img-thumbnail" src="images/social-media-placeholder.jpg">
+            <img alt="Image Placeholder" class="img-thumbnail" src="images/Post3.png">
           </a>
         </li>
+      </ul>
+	<p>&nbsp;</p>
+      <ul class="list-unstyled d-flex flex-wrap justify-content-center align-items-center">
+        <li class="m-2">
+          <a href="#"><!-- Please make a link to your socials instead -->
+            <img alt="Image Placeholder" class="img-thumbnail" src="images/Post4.png">
+          </a>
+        </li>
+        <li class="m-2">
+          <a href="#"><!-- Please make a link to your socials instead -->
+            <img alt="Image Placeholder" class="img-thumbnail" src="images/Post5.png">
+          </a>
+        </li>
+        <li class="m-2">
+          <a href="#"><!-- Please make a link to your socials instead -->
+            <img alt="Image Placeholder" class="img-thumbnail" src="images/Post6.png">
+          </a>
+        </li>
+      </ul>
+		<p>&nbsp;</p>
+      <ul class="list-unstyled d-flex flex-wrap justify-content-center align-items-center">
+        <li class="m-2">
+          <a href="#"><!-- Please make a link to your socials instead -->
+            <img alt="Image Placeholder" class="img-thumbnail" src="images/Post7.png">
+          </a>
+        </li>
+        <li class="m-2">
+          <a href="#"><!-- Please make a link to your socials instead -->
+            <img alt="Image Placeholder" class="img-thumbnail" src="images/Post8.png">
+          </a>
+        </li>
+        <li class="m-2">
+          <a href="#"><!-- Please make a link to your socials instead -->
+            <img alt="Image Placeholder" class="img-thumbnail" src="images/Post9.png">
+          </a>
+        </li>
+      </ul>
+		<p>&nbsp;</p>
+      <ul class="list-unstyled d-flex flex-wrap justify-content-center align-items-center">
+        <li class="m-2">
+          <a href="#"><!-- Please make a link to your socials instead -->
+            <img alt="Image Placeholder" class="img-thumbnail" src="images/Post10.png">
+          </a>
+        </li>
+        <li class="m-2">
+          <a href="#"><!-- Please make a link to your socials instead -->
+            <img alt="Image Placeholder" class="img-thumbnail" src="images/Post11.png">
+          </a>
+        </li>
+        
       </ul>
     </main>
 
@@ -119,7 +182,7 @@
           </li>
         </ul>
       </div>
-    </footer>
+  </footer>
     <!-- End of the grid -->
 
   </body>
